--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,8 @@ dependencies {
 
     //in app update
     implementation 'com.google.android.play:core:1.6.4'
+
+    //xmode
+    implementation "com.github.xmode-social-inc:android-mysdk:1.9.2"
+
 }
