--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         </activity>
 
         <service
-            android:name=".Notifications.NotificationService"
+            android:name=".notifications.NotificationService"
             android:exported="false"
             tools:ignore="InnerclassSeparator">
             <intent-filter>
@@ -53,7 +53,7 @@
             </intent-filter>
         </service>
         <service
-            android:name=".Notifications.MyFirebaseMessaging"
+            android:name=".notifications.MyFirebaseMessaging"
             android:exported="false"
             tools:ignore="InnerclassSeparator">
             <intent-filter>
