--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,16 @@
+buildscript {
+    repositories {
+        maven { url 'https://plugins.gradle.org/m2/' }
+    }
+    dependencies {
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.7'
+    }
+}
 apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
+repositories {
+    maven { url 'https://maven.google.com' }
+}
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -9,21 +21,20 @@ apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle p
 buildscript {
     repositories {
         maven { url 'https://plugins.gradle.org/m2/' }
-        maven { url 'https://maven.google.com' }
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.6'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.7'
     }
 }
 
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.appyhigh.utilityapp"
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -101,11 +112,12 @@ dependencies {
     implementation 'com.onesignal:OneSignal:3.13.0'
 
     //fb login
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.facebook.android:facebook-login:6.3.0'
 
     //fb audience
-    implementation 'com.facebook.android:audience-network-sdk:5.+'
-    implementation 'com.google.ads.mediation:facebook:5.6.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.8.0'
+    implementation 'com.google.ads.mediation:facebook:5.6.1.0'
 
 
     //in app update
