--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,33 +97,38 @@ dependencies {
     }
 
     //admob
-    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+    implementation 'com.google.android.gms:play-services-ads:19.2.0'
 
     //multidex
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.4.0'
-    implementation 'com.google.firebase:firebase-messaging:20.1.6'
-    implementation 'com.google.firebase:firebase-config:19.1.4'
-    implementation 'com.google.firebase:firebase-inappmessaging-display:19.0.6'
+    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
+    implementation 'com.google.firebase:firebase-config:19.2.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:19.1.0'
     implementation 'com.google.firebase:firebase-dynamic-links:19.1.0'
     //onesignal
-    implementation 'com.onesignal:OneSignal:3.13.0'
+    implementation 'com.onesignal:OneSignal:3.14.1'
 
     //fb login
     implementation 'com.facebook.android:facebook-login:6.3.0'
 
     //fb audience
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.facebook.android:audience-network-sdk:5.8.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.10.0'
     implementation 'com.google.ads.mediation:facebook:5.6.1.0'
 
 
     //in app update
-    implementation 'com.google.android.play:core:1.7.2'
+    implementation 'com.google.android.play:core:1.7.3'
 
     //xmode
     implementation "com.github.xmode-social-inc:android-mysdk:1.9.2"
+
+    //celeverTap
+    implementation 'com.clevertap.android:clevertap-android-sdk:3.8.0'
+
+    implementation 'com.google.guava:guava:27.0.1-android'
 
 }
